k2s/test/e2e/addons/traefik/workloads/traefik-test-namespace.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

apiVersion: v1
kind: Namespace
metadata:
  name: traefik-test
